unpackaged/main/default/objects/ETT_Scrap_Inspection__c/ETT_Scrap_Inspection__c.object-meta.xml
<CustomObject>
    <label>Scrap Inspection</label>
    <nameField>
        <displayFormat>SIN-{0000}</displayFormat>
        <label>Scrap Inpsection Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scrap Inspections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>