unpackaged/main/default/objects/ETT_Scrap_Inspection__c/fields/ETT_Account__c.field-meta.xml
<CustomField>
    <fullName>ETT_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Scrap Inspections</relationshipLabel>
    <relationshipName>Scrap_Inspections</relationshipName>
    <type>Lookup</type>
</CustomField>