unpackaged/main/default/objects/ETT_Scrap_Inspection__c/fields/ETT_Date__c.field-meta.xml
<CustomField>
    <fullName>ETT_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date</label>
    <type>Date</type>
</CustomField>