unpackaged/main/default/objects/ETT_Scrap_Inspection__c/fields/ETT_Pressure__c.field-meta.xml
<CustomField>
    <fullName>ETT_Pressure__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pressure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>