unpackaged/main/default/objects/ETT_Scrap_Inspection__c/fields/ETT_Retreaded_Tread_Design__c.field-meta.xml
<CustomField>
    <fullName>ETT_Retreaded_Tread_Design__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Retreaded Tread Design</label>
    <length>255</length>
    <type>Text</type>
</CustomField>