unpackaged/main/default/objects/ETT_Scrap_Inspection__c/fields/ETT_RIB_R_Transaction_T__c.field-meta.xml
<CustomField>
    <fullName>ETT_RIB_R_Transaction_T__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RIB(R) Transaction (T)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>