unpackaged/main/default/objects/ETT_Scrap_Inspection__c/fields/ETT_Tyre_Status__c.field-meta.xml
<CustomField>
    <fullName>ETT_Tyre_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tyre Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>